# systematic-options

./: CMakeLists.txt  README.md
include/data/: data_loader.h  market_data.h  option_data.h
include/data/models/: black_scholes.h
include/models/: risk_management.h  volatility_forecast.h
include/strategy/: implied_vol_strategy.h  strategy.h
include/utils/: date_utils.h  math_utils.h
src/: main.cpp
src/data/: data_loader.cpp
src/models/: black_scholes.cpp  risk_management.cpp  volatility_forecast.cpp
src/strategy/: implied_vol_strategy.cpp
src/utils/: date_utils.cpp  math_utils.cpp
